version-23.1/manage/kubernetes/scale.mdx
---
title: Scale Redpanda in Kubernetes
linkRoot: ../../../
deployment: Kubernetes
description: Scaling a Redpanda cluster involves increasing its resources and/or the number of nodes to handle more data, traffic, and users. You can scale a Redpanda cluster both vertically and horizontally, depending on your requirements.
---

<head>
    <meta name="title" content="Scale Redpanda in Kubernetes | Redpanda Docs"/>
    <meta name="description" content="Scaling a Redpanda cluster involves increasing its resources and/or the number of nodes to handle more data, traffic, and users. You can scale a Redpanda cluster both vertically and horizontally, depending on your requirements."/>
    <link rel="canonical" href="https://docs.redpanda.com/docs/manage/kubernetes/scale/" />
</head>

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

Scaling a Redpanda cluster involves increasing its resources and/or the number of nodes to handle more data, traffic, and users. You can scale a Redpanda cluster both vertically and horizontally, depending on your requirements.

## Vertical Scaling

Vertical (also known as scaling up/down) scaling means increasing the resources, such as CPU cores, memory, and storage, of existing brokers in the cluster.

To scale vertically, see [Manage Pod Resources in Kubernetes](../manage-resources).

:::info
You cannot decrease the number of CPU cores in a running cluster.
:::

## Horizontal Scaling

Horizontal scaling (also known as scaling out/in) means adding more brokers to the cluster, thereby distributing the load and data across different worker nodes.

1. If you're scaling out, make sure that you have one additional worker node for each Redpanda broker that you want to add.

1. Update the number of replicas in the Helm chart:

  <Tabs groupId="helm-config" queryString>
  <TabItem value="values" label="--values">

  ```yaml title="replicas.yaml"
  statefulset:
    replicas: <number-of-replicas>
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --values replicas.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda -n redpanda --create-namespace \
    --set statefulset.replicas=<number-of-replicas>
  ```

  </TabItem>
  </Tabs>

1. Verify that your Redpanda cluster has the desired number of replicas:

  ```bash
  kubectl get statefulsets -n redpanda
  ```
